2006-09-25 [colin]	2.5.0cvs2

	* src/imap.c
	* src/etpan/imap-thread.c
		Use UID SEARCH ALL instead of UID 1:*
		(braindead servers can't figure out that's
		the same...)

2006-09-25 [wwp]	2.5.0cvs1

	* src/message_search.c
		Added the ability to stop a running search (in message body).

2006-09-25 [paul]	2.5.0

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.0 released

2006-09-25 [paul]	2.4.0cvs214

	* po/cs.po
	* po/de.po
	* po/fi.po
	* po/fr.po
	* po/nl.po
	* po/pt_BR.po
	* po/sk.po
	* po/sr.po
	* po/zh_CN.po
		updated by Tim, Stephan Sachse, Flammie Pirinen,
		Fabien Vantard, Tim Dijkstra, Frederico Goncalves Guimaraes,
		Ticho, Aleksander Urosevic, Ralgh Young

2006-09-24 [mones]	2.4.0cvs213

	* po/es.po
		Updated for release

2006-09-23 [colin]	2.4.0cvs212

	* src/gtk/inputdialog.c
		Fix [ ] remember this appearing in normal
		input dialogs after it's been used by
		mimeview.
	* src/folder.c
	* src/folderview.c
	* src/msgcache.c
	* src/procmsg.c
	* src/summaryview.c
	* src/textview.c
	* src/common/timing.h
		Enable timings in debug mode and make it
		look prettier.

2006-09-22 [colin]	2.4.0cvs211

	* README
		Revert test change
	* commitHelper
		ping the correct URI

2006-09-22 [colin]	2.4.0cvs210

	* README
		Let's see if bug #1022 is fixed

2006-09-21 [colin]	2.4.0cvs209

	* src/wizard.c
	* src/common/plugin.c
		Prepare infra to load predefined plugins when
		no configuration existed. Don't actually load
		anything yet (feat. freeze)

2006-09-21 [wwp]	2.4.0cvs208

	* manual/fr/faq.xml
		Partial sync w/ 2.4.0cvs72:
		wrap file and minor updates.

2006-09-21 [wwp]	2.4.0cvs207

	* tools/fix_date.sh
		several fixes and enhancements. A new --force switch has been
		added to prevent overriding by default Date: header when
		already existing.

2006-09-21 [paul]	2.4.0cvs206

	* src/common/utils.c
		add Chinese UTF8 Re prefix

2006-09-21 [wwp]	2.4.0cvs205

	* tools/Makefile.am
		Fics alfabettical order.

2006-09-21 [wwp]	2.4.0cvs204

	* tools/fix_date.sh