@@ -1908,3 +1908,4 @@
 ( cvs diff -u -r 1.9.2.7 -r 1.9.2.8 po/cs.po;  cvs diff -u -r 1.58.2.24 -r 1.58.2.25 po/de.po;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 po/fi.po;  cvs diff -u -r 1.42.2.26 -r 1.42.2.27 po/fr.po;  cvs diff -u -r 1.28.2.7 -r 1.28.2.8 po/nl.po;  cvs diff -u -r 1.50.2.20 -r 1.50.2.21 po/pt_BR.po;  cvs diff -u -r 1.2.2.20 -r 1.2.2.21 po/sk.po;  cvs diff -u -r 1.17.2.23 -r 1.17.2.24 po/sr.po;  cvs diff -u -r 1.5.2.18 -r 1.5.2.19 po/zh_CN.po;  ) > 2.4.0cvs214.patchset
 ( cvs diff -u -r 1.3.12.16 -r 1.3.12.17 src/message_search.c;  ) > 2.5.0cvs1.patchset
 ( cvs diff -u -r 1.179.2.131 -r 1.179.2.132 src/imap.c;  cvs diff -u -r 1.1.4.51 -r 1.1.4.52 src/etpan/imap-thread.c;  ) > 2.5.0cvs2.patchset
+( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/plugins/bogofilter/bogofilter.c;  cvs diff -u -r 1.13.2.24 -r 1.13.2.25 src/plugins/clamav/clamav_plugin.c;  cvs diff -u -r 1.18.2.41 -r 1.18.2.42 src/plugins/spamassassin/spamassassin.c;  ) > 2.5.0cvs3.patchset
