@@ -1,3 +1,13 @@
+2006-09-25 [colin]	2.5.0cvs3
+
+	* src/plugins/bogofilter/bogofilter.c
+	* src/plugins/clamav/clamav_plugin.c
+	* src/plugins/spamassassin/spamassassin.c
+		BogoFilter, Spamassassin: Fix double hook registering after
+		visiting preferences
+		Spamassassin, Clamav: Just set the mails to move instead of
+		doing the move - caller will move the things at once.
+
 2006-09-25 [colin]	2.5.0cvs2
 
 	* src/imap.c
